recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:4: error: not found: value y
    sierpinski(level-1, y/2)
                        ^Sierpinski:9: error: not found: value lenght
      avance(lenght)
             ^Sierpinski:10: error: not found: value droie
      droie(120)
      ^